--- a/profile/profile.html
+++ b/profile/profile.html
@@ -3,25 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lira Kurdi - Profile</title>
+    <title>Lira Kurdi - Wallet</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="profile.css">
 </head>
 <body>
     <div class="container-fluid">
-        <header class="header text-center py-4">
-            <img src="../images/logo.png" alt="Lira Kurdi Logo" class="logo mb-3">
-            <h1 class="display-6">Your Profile</h1>
+        <header class="header py-4">
+            <div class="d-flex align-items-center">
+                <img src="../images/logo.png" alt="Lira Kurdi Logo" class="logo me-3">
+                <div>
+                    <h1 class="display-6 mb-0" id="fullName">Guest</h1>
+                    <a href="#" id="telegramLink" class="telegram-link" target="_blank">@Guest</a>
+                </div>
+            </div>
+            <a href="../index.html" class="btn btn-outline-primary mt-3">Go Main</a>
         </header>
-        <main class="py-5">
-            <div class="card profile-card mx-auto">
+        <main class="py-4">
+            <div class="wallet-card mx-auto">
                 <div class="card-body">
-                    <h5 class="card-title">Welcome, <span id="username">Guest</span></h5>
-                    <p class="card-text">Connect your Telegram wallet to view your $LKURD balance.</p>
-                    <button class="btn btn-primary w-100 mb-3" onclick="connectWallet()">Connect Wallet</button>
-                    <p><strong>Balance:</strong> <span id="balance">0 $LKURD</span></p>
+                    <h5 class="card-title">Your Wallet</h5>
+                    <button class="btn btn-primary w-100 mb-4" onclick="connectWallet()">Connect Telegram Wallet</button>
+                    <div class="balance-list">
+                        <div class="balance-item">
+                            <i class="bi bi-currency-bitcoin"></i>
+                            <span>LKURD</span>
+                            <span id="lkurdBalance">100</span>
+                            <span>$1.00</span>
+                        </div>
+                        <div class="balance-item">
+                            <i class="bi bi-currency-bitcoin"></i>
+                            <span>BTC</span>
+                            <span id="btcBalance">0.002</span>
+                            <span id="btc">$<span>Yükleniyor...</span></span>
+                        </div>
+                        <div class="balance-item">
+                            <i class="bi bi-currency-bitcoin"></i>
+                            <span>ETH</span>
+                            <span id="ethBalance">0.05</span>
+                            <span id="eth">$<span>Yükleniyor...</span></span>
+                        </div>
+                        <div class="balance-item">
+                            <i class="bi bi-currency-bitcoin"></i>
+                            <span>TON</span>
+                            <span id="tonBalance">10</span>
+                            <span id="ton">$<span>Yükleniyor...</span></span>
+                        </div>
+                        <div class="balance-item">
+                            <i class="bi bi-currency-bitcoin"></i>
+                            <span>XRP</span>
+                            <span id="xrpBalance">50</span>
+                            <span id="xrp">$<span>Yükleniyor...</span></span>
+                        </div>
+                        <div class="balance-item">
+                            <i class="bi bi-currency-bitcoin"></i>
+                            <span>ADA</span>
+                            <span id="adaBalance">100</span>
+                            <span id="ada">$<span>Yükleniyor...</span></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="top-up-card mx-auto mt-4">
+                <div class="card-body">
+                    <h5 class="card-title">Top Up $LKURD</h5>
+                    <p class="card-text">1 $LKURD = 1 TL (Market capacity until filled)</p>
+                    <div class="input-group mb-3">
+                        <input type="number" class="form-control" id="topUpAmount" placeholder="Enter amount" min="1">
+                        <span class="input-group-text">LKURD</span>
+                    </div>
+                    <button class="btn btn-primary w-100" onclick="topUpBalance()">Buy with Telegram Stars</button>
                 </div>
             </div>
         </main>
