--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lira Kurdi - New Mesopotamia's Cryptocurrency</title>
+    <title>Lira Kurdi - Financial Freedom for Mesopotamia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,13 +13,42 @@
         <img src="images/logo.png" alt="Lira Kurdi Logo" class="intro-logo">
     </div>
     <div id="main-content" class="d-none">
-        <header class="header text-center py-4">
+        <header class="header py-4 text-center">
             <img src="images/logo.png" alt="Lira Kurdi Logo" class="logo mb-3">
             <h1 class="display-4">Lira Kurdi</h1>
-            <p class="slogan">Empowering Financial Freedom for Kurds and Beyond</p>
-            <a href="profile/profile.html" class="btn btn-primary mt-3">Connect Wallet</a>
+            <p class="slogan">Financial Freedom for Mesopotamia</p>
         </header>
         <main class="container-fluid">
+            <section class="hero py-5 text-center">
+                <h2 class="hero-title">Invest in the Future with $LKURD</h2>
+                <p class="hero-text">Join the decentralized revolution powered by TON blockchain.</p>
+                <a href="profile/profile.html" class="btn btn-primary mt-3">Connect Wallet</a>
+            </section>
+            <section class="slogans py-5">
+                <div class="row g-4">
+                    <div class="col-12 col-md-4">
+                        <div class="slogan-card">
+                            <i class="bi bi-rocket-takeoff"></i>
+                            <h3>Rise with $LKURD</h3>
+                            <p>Empower your wealth with our scalable cryptocurrency.</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="slogan-card">
+                            <i class="bi bi-wallet2"></i>
+                            <h3>Secure Your Future</h3>
+                            <p>Low fees, fast transactions, and ultimate security.</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="slogan-card">
+                            <i class="bi bi-globe"></i>
+                            <h3>Join the Movement</h3>
+                            <p>Be part of the Kurdish financial ecosystem.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="game-cards py-5">
                 <h2 class="section-title">Explore Our Games</h2>
                 <div class="row g-4">
@@ -30,7 +58,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Age of Web</h5>
                                 <p class="card-text">Conquer the pixel world map with $LKURD!</p>
-                                <a href="gameofweb/index.html" class="btn btn-outline-light">Play Now</a>
+                                <a href="gameofweb/index.html" class="btn btn-outline-primary">Play Now</a>
                             </div>
                         </div>
                     </div>
@@ -39,29 +67,29 @@
                             <div class="card-body">
                                 <h5 class="card-title">Coming Soon</h5>
                                 <p class="card-text">New adventures await!</p>
-                                <button class="btn btn-outline-light disabled">Stay Tuned</button>
+                                <button class="btn btn-outline-primary disabled">Stay Tuned</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="community py-5">
+            <section class="community py-5 text-center">
                 <h2 class="section-title">Join Our Community</h2>
-                <div class="row g-3 text-center">
+                <div class="row g-3">
                     <div class="col-12 col-md-4">
-                        <a href="https://t.me/LiraKurdiSupport" target="_blank" class="btn btn-outline-light"><i class="bi bi-telegram"></i> Telegram</a>
+                        <a href="https://t.me/LiraKurdiSupport" target="_blank" class="btn btn-outline-primary"><i class="bi bi-telegram"></i> Telegram</a>
                     </div>
                     <div class="col-12 col-md-4">
-                        <a href="https://x.com/LiraKurdi" target="_blank" class="btn btn-outline-light"><i class="bi bi-twitter-x"></i> X</a>
+                        <a href="https://x.com/LiraKurdi" target="_blank" class="btn btn-outline-primary"><i class="bi bi-twitter-x"></i> X</a>
                     </div>
                     <div class="col-12 col-md-4">
-                        <a href="https://instagram.com/LiraKurdi" target="_blank" class="btn btn-outline-light"><i class="bi bi-instagram"></i> Instagram</a>
+                        <a href="https://instagram.com/LiraKurdi" target="_blank" class="btn btn-outline-primary"><i class="bi bi-instagram"></i> Instagram</a>
                     </div>
                 </div>
             </section>
         </main>
         <footer class="footer text-center py-3">
-            <p>&copy; 2025 Lira Kurdi. All rights reserved.</p>
+            <p>© 2025 Lira Kurdi. All rights reserved.</p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
