--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lira Kurdi - Financial Freedom for Mesopotamia</title>
+    <title>Lira Kurdi - Financial Freedom</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
@@ -13,84 +13,238 @@
         <img src="images/logo.png" alt="Lira Kurdi Logo" class="intro-logo">
     </div>
     <div id="main-content" class="d-none">
-        <header class="header py-4 text-center">
-            <img src="images/logo.png" alt="Lira Kurdi Logo" class="logo mb-3">
-            <h1 class="display-4">Lira Kurdi</h1>
-            <p class="slogan">Financial Freedom for Mesopotamia</p>
-        </header>
-        <main class="container-fluid">
-            <section class="hero py-5 text-center">
-                <h2 class="hero-title">Invest in the Future with $LKURD</h2>
-                <p class="hero-text">Join the decentralized revolution powered by TON blockchain.</p>
-                <a href="profile/profile.html" class="btn btn-primary mt-3">Connect Wallet</a>
-            </section>
-            <section class="slogans py-5">
+        <div id="home" class="page">
+            <header class="header py-4 text-center">
+                <img src="images/logo.png" alt="Lira Kurdi Logo" class="logo mb-3">
+                <h1 class="display-4">Lira Kurdi</h1>
+                <p class="slogan">Financial Freedom for Mesopotamia</p>
+            </header>
+            <main class="container-fluid">
+                <section class="lkurd-details py-5 text-center">
+                    <h2 class="section-title">What is $LKURD?</h2>
+                    <p class="lead">A decentralized cryptocurrency on TON blockchain, designed for low fees, fast transactions, and financial empowerment.</p>
+                    <div class="row g-4 mt-4">
+                        <div class="col-12 col-md-4">
+                            <div class="feature-card">
+                                <i class="bi bi-shield-lock"></i>
+                                <h3>Secure</h3>
+                                <p>Built on TON’s robust blockchain.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <div class="feature-card">
+                                <i class="bi bi-lightning"></i>
+                                <h3>Fast</h3>
+                                <p>Instant transactions worldwide.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <div class="feature-card">
+                                <i class="bi bi-wallet2"></i>
+                                <h3>Low Fees</h3>
+                                <p>Nearly zero-cost transfers.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="slogans py-5">
+                    <h2 class="section-title">Invest in Your Future</h2>
+                    <div class="row g-4">
+                        <div class="col-12 col-md-6">
+                            <div class="slogan-card">
+                                <h3>Şimdi Al, Bir Yıl Sonra Zengin Ol!</h3>
+                                <p>Join the $LKURD revolution today.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="slogan-card">
+                                <h3>Al-Sat, Coptrading, Katıl!</h3>
+                                <p>Trade smart, grow your wealth.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="slogan-card">
+                                <h3>BTC Yatır, $LKURD Kazan!</h3>
+                                <p>Convert your BTC to $LKURD and thrive.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="slogan-card">
+                                <h3>Financial Freedom Awaits</h3>
+                                <p>Empower your wealth with $LKURD.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="links py-5 text-center">
+                    <h2 class="section-title">Join Our Community</h2>
+                    <div class="row g-3">
+                        <div class="col-12 col-md-4">
+                            <a href="https://t.me/LiraKurdiSupport" target="_blank" class="btn btn-outline-primary"><i class="bi bi-telegram"></i> Telegram</a>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <a href="https://x.com/LiraKurdi" target="_blank" class="btn btn-outline-primary"><i class="bi bi-twitter-x"></i> X</a>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <a href="https://instagram.com/LiraKurdi" target="_blank" class="btn btn-outline-primary"><i class="bi bi-instagram"></i> Instagram</a>
+                        </div>
+                    </div>
+                </section>
+                <section class="intro py-5">
+                    <h2 class="section-title">Why Lira Kurdi?</h2>
+                    <p class="lead text-center">Empowering the Kurdish ecosystem with a decentralized financial network. Earn $LKURD through referrals and social media tasks!</p>
+                    <div class="row g-4 mt-4">
+                        <div class="col-12 col-md-6">
+                            <div class="intro-card">
+                                <h3>Referral System</h3>
+                                <p>Invite friends, earn 20 $LKURD per signup.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="intro-card">
+                                <h3>Airdrop Rewards</h3>
+                                <p>Follow us on social media, earn up to 50 $LKURD.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </main>
+        </div>
+        <div id="investment" class="page d-none">
+            <main class="container-fluid py-5">
+                <h2 class="section-title">Investment Opportunities</h2>
                 <div class="row g-4">
-                    <div class="col-12 col-md-4">
-                        <div class="slogan-card">
-                            <i class="bi bi-rocket-takeoff"></i>
-                            <h3>Rise with $LKURD</h3>
-                            <p>Empower your wealth with our scalable cryptocurrency.</p>
+                    <div class="col-12 col-md-6">
+                        <div class="investment-card">
+                            <h3>Buy & Sell $LKURD</h3>
+                            <p>Trade $LKURD at 1 TL per token (limited offer).</p>
+                            <a href="https://t.me/LiraKurdiSupport" target="_blank" class="btn btn-primary">Trade Now</a>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4">
-                        <div class="slogan-card">
-                            <i class="bi bi-wallet2"></i>
-                            <h3>Secure Your Future</h3>
-                            <p>Low fees, fast transactions, and ultimate security.</p>
+                    <div class="col-12 col-md-6">
+                        <div class="investment-card">
+                            <h3>Coptrading</h3>
+                            <p>Follow top traders, mirror their success.</p>
+                            <button class="btn btn-primary disabled">Coming Soon</button>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4">
-                        <div class="slogan-card">
-                            <i class="bi bi-globe"></i>
+                    <div class="col-12 col-md-6">
+                        <div class="investment-card">
+                            <h3>BTC Investment</h3>
+                            <p>Convert BTC to $LKURD for higher returns.</p>
+                            <a href="https://t.me/LiraKurdiSupport" target="_blank" class="btn btn-primary">Invest Now</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="investment-card">
                             <h3>Join the Movement</h3>
-                            <p>Be part of the Kurdish financial ecosystem.</p>
+                            <p>Stake $LKURD, earn passive income.</p>
+                            <button class="btn btn-primary disabled">Coming Soon</button>
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="game-cards py-5">
-                <h2 class="section-title">Explore Our Games</h2>
+            </main>
+        </div>
+        <div id="game" class="page d-none">
+            <main class="container-fluid py-5">
+                <h2 class="section-title">Our Games</h2>
                 <div class="row g-4">
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card game-card">
-                            <img src="images/gamelogo.png" alt="Age of Web" class="card-img-top">
+                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
+                        <div class="game-card">
+                            <img src="images/gamearkaplan.jpg" alt="Age of Web" class="card-img-top">
                             <div class="card-body">
-                                <h5 class="card-title">Age of Web</h5>
-                                <p class="card-text">Conquer the pixel world map with $LKURD!</p>
-                                <a href="gameofweb/index.html" class="btn btn-outline-primary">Play Now</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card game-card">
-                            <div class="card-body">
-                                <h5 class="card-title">Coming Soon</h5>
-                                <p class="card-text">New adventures await!</p>
-                                <button class="btn btn-outline-primary disabled">Stay Tuned</button>
+                                <div class="d-flex align-items-center mb-2">
+                                    <img src="images/gamelogo.png" alt="Game Logo" class="game-logo me-2">
+                                    <h5 class="card-title mb-0">Age of Web</h5>
+                                </div>
+                                <p class="card-text">Type: Action</p>
+                                <a href="gameofweb/index.html" class="btn btn-primary">Play Now</a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="community py-5 text-center">
-                <h2 class="section-title">Join Our Community</h2>
-                <div class="row g-3">
-                    <div class="col-12 col-md-4">
-                        <a href="https://t.me/LiraKurdiSupport" target="_blank" class="btn btn-outline-primary"><i class="bi bi-telegram"></i> Telegram</a>
-                    </div>
-                    <div class="col-12 col-md-4">
-                        <a href="https://x.com/LiraKurdi" target="_blank" class="btn btn-outline-primary"><i class="bi bi-twitter-x"></i> X</a>
-                    </div>
-                    <div class="col-12 col-md-4">
-                        <a href="https://instagram.com/LiraKurdi" target="_blank" class="btn btn-outline-primary"><i class="bi bi-instagram"></i> Instagram</a>
+            </main>
+        </div>
+        <div id="profile" class="page d-none">
+            <main class="container-fluid py-5">
+                <div class="wallet-card mx-auto">
+                    <div class="card-body">
+                        <h5 class="card-title">Your Wallet</h5>
+                        <p><strong>Name:</strong> <span id="fullName">Guest</span></p>
+                        <p><strong>Username:</strong> <a href="#" id="telegramLink" target="_blank">@Guest</a></p>
+                        <p><strong>User ID:</strong> <span id="userId">N/A</span></p>
+                        <p><strong>Language:</strong> <span id="language">N/A</span></p>
+                        <p><strong>Premium:</strong> <span id="premium">No</span></p>
+                        <button class="btn btn-primary w-100 mb-4" onclick="connectWallet()">Connect Telegram Wallet</button>
+                        <div class="balance-list">
+                            <div class="balance-item">
+                                <i class="bi bi-currency-bitcoin"></i>
+                                <span>LKURD</span>
+                                <span id="lkurdBalance">100</span>
+                                <span>$1.00</span>
+                            </div>
+                            <div class="balance-item">
+                                <i class="bi bi-currency-bitcoin"></i>
+                                <span>BTC</span>
+                                <span id="btcBalance">0.002</span>
+                                <span id="btc">$<span>Yükleniyor...</span></span>
+                            </div>
+                            <div class="balance-item">
+                                <i class="bi bi-currency-bitcoin"></i>
+                                <span>ETH</span>
+                                <span id="ethBalance">0.05</span>
+                                <span id="eth">$<span>Yükleniyor...</span></span>
+                            </div>
+                            <div class="balance-item">
+                                <i class="bi bi-currency-bitcoin"></i>
+                                <span>TON</span>
+                                <span id="tonBalance">10</span>
+                                <span id="ton">$<span>Yükleniyor...</span></span>
+                            </div>
+                            <div class="balance-item">
+                                <i class="bi bi-currency-bitcoin"></i>
+                                <span>XRP</span>
+                                <span id="xrpBalance">50</span>
+                                <span id="xrp">$<span>Yükleniyor...</span></span>
+                            </div>
+                            <div class="balance-item">
+                                <i class="bi bi-currency-bitcoin"></i>
+                                <span>ADA</span>
+                                <span id="adaBalance">100</span>
+                                <span id="ada">$<span>Yükleniyor...</span></span>
+                            </div>
+                        </div>
+                        <div class="top-up-card mt-4">
+                            <h5 class="card-title">Top Up $LKURD</h5>
+                            <p class="card-text">1 $LKURD = 1 TL (Limited Offer)</p>
+                            <div class="input-group mb-3">
+                                <input type="number" class="form-control" id="topUpAmount" placeholder="Enter amount" min="1">
+                                <span class="input-group-text">LKURD</span>
+                            </div>
+                            <button class="btn btn-primary w-100" onclick="topUpBalance()">Buy with Telegram Stars</button>
+                        </div>
                     </div>
                 </div>
-            </section>
-        </main>
-        <footer class="footer text-center py-3">
-            <p>© 2025 Lira Kurdi. All rights reserved.</p>
-        </footer>
+            </main>
+        </div>
+        <nav class="navbar fixed-bottom navbar-light">
+            <div class="container-fluid">
+                <ul class="nav nav-pills nav-fill w-100">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#" onclick="showPage('home')"><i class="bi bi-house"></i> Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onclick="showPage('investment')"><i class="bi bi-graph-up"></i> Investment</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onclick="showPage('game')"><i class="bi bi-joystick"></i> Game</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onclick="showPage('profile')"><i class="bi bi-person"></i> Profile</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
