--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="col-12 col-md-6">
                             <div class="slogan-card">
                                 <h3>BTC Yatır, $LKURD Kazan!</h3>
-                                <p>Convert your BTC to $LKURD and thrive.</p>
+                                <p>Convert BTC to $LKURD for higher returns.</p>
                             </div>
                         </div>
                         <div class="col-12 col-md-6">
@@ -170,18 +170,22 @@
                 <div class="wallet-card mx-auto">
                     <div class="card-body">
                         <h5 class="card-title">Your Wallet</h5>
-                        <p><strong>Name:</strong> <span id="fullName">Guest</span></p>
-                        <p><strong>Username:</strong> <a href="#" id="telegramLink" target="_blank">@Guest</a></p>
-                        <p><strong>User ID:</strong> <span id="userId">N/A</span></p>
-                        <p><strong>Language:</strong> <span id="language">N/A</span></p>
-                        <p><strong>Premium:</strong> <span id="premium">No</span></p>
+                        <div class="profile-info">
+                            <img id="profilePhoto" src="" alt="Profile Photo" class="profile-photo d-none">
+                            <p><strong>Name:</strong> <span id="fullName">Guest</span></p>
+                            <p><strong>Username:</strong> <a href="#" id="telegramLink" target="_blank">@Guest</a></p>
+                            <p><strong>User ID:</strong> <span id="userId">N/A</span></p>
+                            <p><strong>Language:</strong> <span id="language">N/A</span></p>
+                            <p><strong>Premium:</strong> <span id="premium">No</span></p>
+                            <p><strong>Allows PM:</strong> <span id="allowsPm">N/A</span></p>
+                            <p><strong>Blocked Users:</strong> <span id="blockedUsers">Gizemli! 😜</span></p>
+                        </div>
                         <button class="btn btn-primary w-100 mb-4" onclick="connectWallet()">Connect Telegram Wallet</button>
                         <div class="balance-list">
                             <div class="balance-item">
                                 <i class="bi bi-currency-bitcoin"></i>
                                 <span>LKURD</span>
-                                <span id="lkurdBalance">100</span>
-                                <span>$1.00</span>
+                                <span id="lkurdBalance">100.00 LKURD - ₺100.00</span>
                             </div>
                             <div class="balance-item">
                                 <i class="bi bi-currency-bitcoin"></i>
